--- a/Artist/app/build.gradle
+++ b/Artist/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
 
     androidTestImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation 'androidx.test:runner:1.1.1'
+
+    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
 }
