--- a/Artist/app/src/main/AndroidManifest.xml
+++ b/Artist/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.DetailsActivity"
-            android:label="Details"/>
+        <activity
+            android:name=".ui.DetailsActivity"
+            android:label="Details" />
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
